verify_output.txt
FAIL in smarthome-hashmap-answer:
EXPECTED:
添加后设备数量：3
查询 id=102 的设备：Device{id='102', name='智能空调'}
删除后再次查询 id=102：null
ACTUAL:
添加后设备数量：3
查询 id=102 的设备：智能空调
删除后再次查询 id=102：null
----------------------------------------
COMPILE ERROR in generic-box-answer: /home/cc/server/java-exam-paper-system/project-answer/generic-box-answer/src/com/exam/generic/Object.java:21: error: method does not override or implement a method from a supertype
    @Override
    ^
1 error

FAIL in weather-observer-answer:
EXPECTED:
统一处理基础气象数据：温度数据
统一处理高级气象数据：湿度数据
ACTUAL:
添加后气象数据数量：3
查询 id=102 的气象数据：湿度数据
删除后再次查询 id=102：null
----------------------------------------
FAIL in shape-area-answer:
EXPECTED:
统一处理基础图形：圆形
统一处理高级图形：矩形
ACTUAL:
添加后图形数量：3
查询 id=102 的图形：矩形
删除后再次查询 id=102：null
----------------------------------------
Verification complete: 85 passed, 4 failed
